[gd_scene load_steps=9 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://art/starfield.png" type="Texture" id=2]
[ext_resource path="res://Controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://audio/music.opus" type="AudioStream" id=5]
[ext_resource path="res://anim/cam_shake.tres" type="Animation" id=6]
[ext_resource path="res://anim/bg_anim.tres" type="Animation" id=7]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=8]

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 960, 445 )
transform/scale = Vector2( 2.24, 1.97778 )
texture = ExtResource( 2 )

[node name="Controller" parent="." instance=ExtResource( 3 )]

[node name="player" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 584.358, 597.04 )

[node name="spawn_locations" type="Node2D" parent="."]

editor/display_folded = true

[node name="Position2D" type="Position2D" parent="spawn_locations"]

[node name="Position2D_1" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 1920, 0 )

[node name="Position2D_2" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 1920, 890 )

[node name="Position2D_3" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 0, 890 )

[node name="Position2D_4" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 0, 490 )

[node name="Position2D_5" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 980, 0 )

[node name="Position2D_6" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 960, 890 )

[node name="Position2D_7" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 1920, 445 )

[node name="rock_container" type="Node2D" parent="."]

[node name="enemy_container" type="Node2D" parent="."]

[node name="music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 960, 444 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="shake_anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/cam_shake = ExtResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "bg_blink"

[node name="blink_anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/bg_anim = ExtResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "bg_anim"

[node name="HUD" parent="." instance=ExtResource( 8 )]

[connection signal="action_1_pressed" from="Controller" to="player" method="_on_Controller_action_1_pressed"]

[connection signal="action_pause" from="Controller" to="HUD" method="_on_Controller_action_pause"]

[connection signal="navi_pressed" from="Controller" to="player" method="_on_Controller_navi_pressed"]

[connection signal="navi_released" from="Controller" to="player" method="_on_Controller_navi_released"]

[connection signal="navi_rotated" from="Controller" to="player" method="_on_Controller_navi_rotated"]

[connection signal="player_death" from="player" to="." method="_on_player_player_death"]

[connection signal="score_update" from="player" to="HUD" method="_on_player_score_update"]

[connection signal="shield_level_update" from="player" to="HUD" method="_on_player_shield_level_update"]


